Привел в порядок код
Почистил все ненужные юлоки <div>, разобрался с псевдоєлементами, офрмил графическую часть (то что проходили на практике в ПН)

--- a/index.html
+++ b/index.html
@@ -12,38 +12,32 @@
 <body>
 
   <!-- Шапка сайта с навигацией conteiner -->
-  <header>
+  <header class="underline">
     <div class="header-nav conteiner">
       <div class="block-logo">
         <a href="#" class="logo">
           <b>Web&nbsp;<span class="logo-black">Studio</span></b>
         </a>        
       </div>
-      <div class="navigation">
-        <nav>
-          <ul class="site-nav">
-            <li class="item"><a class="link activ" href="./index.html">Студия</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="header-buttons" >
-        <ul>
-          <li class="item mail">
-            <a href="mailto:info@devstudio.com" class="link">
-              <!-- <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/> -->
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="item phone">
-            <a href="tel:+380961111111" class="link">
-              <!-- <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" /> -->
-              &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
-            </a>
-          </li>
+      <nav>
+        <ul class="site-nav">
+          <li class="item"><a class="link  activ" href="./index.html">Студия</a></li>
+          <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
         </ul>
-      </div>
+      </nav>
+      <ul class="contacts-links">
+        <li class="item">
+          <a class="link mail" href="mailto:info@devstudio.com" >
+            info@devstudio.com
+          </a>
+        </li>
+        <li class="item">
+          <a class="link phone" href="tel:+380961111111">
+            &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+          </a>
+        </li>
+      </ul>
     </div>
   </header>
 
@@ -158,114 +152,73 @@
           <li class="command-box employee-a">
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <div class="command-soc-link">
-              <ul>
-                <li>
-                  <a href="https://www.instagram.com/">
-                    <img src="./images/inst.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/">
-                    <img src="./images/twit.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/">
-                    <img src="./images/fb.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/">
-                    <img src="./images/in.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="command-soc-link">
+              <li>
+                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li class="command-box employee-b">
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <div class="command-soc-link">
-              <ul>
-                <li>
-                  <a href="https://www.instagram.com/">
-                    <img src="./images/inst.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/">
-                    <img src="./images/twit.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/">
-                    <img src="./images/fb.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/">
-                    <img src="./images/in.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="command-soc-link">
+              <li>
+                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a></li>
+              <li>
+                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li class="command-box employee-c">
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <div class="command-soc-link">
-              <ul>
-                <li>
-                  <a href="https://www.instagram.com/">
-                    <img src="./images/inst.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/">
-                    <img src="./images/twit.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/">
-                    <img src="./images/fb.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/">
-                    <img src="./images/in.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="command-soc-link">
+              <li>
+                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li class="command-box employee-d">
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <div class="command-soc-link">
-              <ul>
-                <li>
-                  <a href="https://www.instagram.com/">
-                    <img src="./images/inst.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/">
-                    <img src="./images/twit.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/">
-                    <img src="./images/fb.svg" alt="" />
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/">
-                    <img src="./images/in.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="command-soc-link">
+              <li>
+                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -323,7 +276,7 @@
           <b>Присоединяйтесь</b>
         </p>
         <ul>
-          <li><a class="soc-links instafram" href="#" aria-label=" ссылка на социальную сеть инстаграм"></a></li>
+          <li><a class="soc-links instagram" href="#" aria-label=" ссылка на социальную сеть инстаграм"></a></li>
           <li><a class="soc-links twitter" href="#" aria-label="ссылка на социальную сеть твиттер"></a></li>
           <li><a class="soc-links facebook" href="#" aria-label="ссылка на социальную сеть фэйсбук"></a></li>
           <li><a class="soc-links linkedin" href="#" aria-label="ссылка на социальную сеть линкедин"></a></li>
@@ -345,11 +298,9 @@
     </div> 
 
     <!-- общяя\центральная нижняя часть футера -->
-    <div>
-      <p class="developed">
-        2020 | Developed by GoIT Students
-      </p>
-    </div>
+    <p class="developed">
+      2020 | Developed by GoIT Students
+    </p>
   </footer>
 
 </body>
