--- a/portfolio.html
+++ b/portfolio.html
@@ -20,29 +20,25 @@
           <b>Web&nbsp;<span class="logo-black">Studio</span></b>
         </a>        
       </div>
-      <div class="navigation">
-        <nav>
-          <ul class="site-nav">
-            <li class="item"><a class="link " href="./index.html">Студия</a></li>
-            <li class="item"><a class="link activ" href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="header-buttons" >
-        <ul>
-          <li class="item mail">
-            <a href="mailto:info@devstudio.com" class="link">
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="item phone">
-            <a href="tel:+380961111111" class="link">
-              &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
-            </a>
-          </li>
+      <nav>
+        <ul class="site-nav">
+          <li class="item"><a class="link " href="./index.html">Студия</a></li>
+          <li class="item"><a class="link activ" href="./portfolio.html">Портфолио</a></li>
+          <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
         </ul>
-      </div>
+      </nav>
+      <ul class="contacts-links">
+        <li class="item">
+          <a class="link mail" href="mailto:info@devstudio.com" >
+            info@devstudio.com
+          </a>
+        </li>
+        <li class="item">
+          <a class="link phone" href="tel:+380961111111">
+            &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+          </a>
+        </li>
+      </ul>
     </div>
   </header>
 
@@ -51,8 +47,8 @@
   <h1 class="is-hidden">
     Примеры наших работ
   </h1>
-  <div class="filtrs-batton">
-    <ul>
+  <!-- <div > -->
+    <ul class="filtrs-batton">
       <li class="list-portfolio">
         <a class="link-portfolio" href="#" >Все</a>
       </li>
@@ -69,9 +65,8 @@
         <a class="link-portfolio" href="#">Маркетинг</a>
       </li>
     </ul>
-  </div>
-  <div class="projeck-conteiner">
-    <ul >
+  <!-- </div> -->
+    <ul class="projeck-conteiner">
       <li class="card">
         <a href="#">
           <div class="card-content icon-a-min">
@@ -145,7 +140,6 @@
         </a>
       </li>
     </ul>
-  </div>  
  </main>
 
   <!-- подвал conteiner -->
@@ -174,7 +168,6 @@
           <li><a class="soc-links twitter" href="#" aria-label="ссылка на социальную сеть твиттер"></a></li>
           <li><a class="soc-links facebook" href="#" aria-label="ссылка на социальную сеть фэйсбук"></a></li>
           <li><a class="soc-links linkedin" href="#" aria-label="ссылка на социальную сеть линкедин"></a></li>
-
         </ul>
       </div>      
 
@@ -187,20 +180,15 @@
           <input type="text" value="E-mail">
           <a class="button" href="#">
             <b>Подписаться</b>
-            <!-- <span class="iconsend">
-              <img src="./images/icon-send.svg" alt="">
-            </span> -->
           </a>
         </form>
       </div>        
     </div> 
 
     <!-- общяя\центральная нижняя часть футера -->
-    <div>
-      <p class="developed">
-        2020 | Developed by GoIT Students
-      </p>
-    </div>
+    <p class="developed">
+      2020 | Developed by GoIT Students
+    </p>
   </footer>
 
 </body>
