--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
               </p>
             </li>
             <li class="features-box-content icon-clock">
-              <!-- <img class="img-features" src="./images/features/clock.svg" title="наша пунктуальность заслуживает уважения" /> -->
               <h3>
                 Пунктуальность
               </h3>
@@ -82,7 +81,6 @@
               </p>
             </li>
             <li class="features-box-content icon-diagram">
-              <!-- <img class="img-features" src="./images/features/diagram.svg" alt="иконка с диаграммой" title="постоянно держим руку на пульсе" /> -->
               <h3>
                 Планирование
               </h3>
@@ -92,7 +90,6 @@
               </p>
             </li>
             <li class="features-box-content icon-astronaut">
-              <!-- <img class="img-features" src="./images/features/astronaut.svg" alt="иконка с космонавтом" title="мы следим за современными технологиями"  /> -->
               <h3>
                 Современные технологии
               </h3>
@@ -297,7 +294,7 @@
       </div>        
     </div> 
 
-    <!-- общяя\центральная нижняя часть футера -->
+    <!-- общяя\центральная нижняя часть футера --- -->
     <p class="developed">
       2020 | Developed by GoIT Students
     </p>
