--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   </head>
 <body>
 
-  <!-- Шапка сайта с навигацией conteiner -->
+  <!-- Шапка сайта с навигацией conteiner яя -->
   <header class="underline">
     <div class="header-nav conteiner">
       <div class="block-logo">
@@ -47,99 +47,97 @@
   <h1 class="is-hidden">
     Примеры наших работ
   </h1>
-  <!-- <div > -->
-    <ul class="filtrs-batton">
-      <li class="list-portfolio">
-        <a class="link-portfolio" href="#" >Все</a>
-      </li>
-      <li class="list-portfolio">
-        <a class="link-portfolio" href="#">Веб-сайты</a>
-      </li>
-      <li class="list-portfolio">
-        <a class="link-portfolio" href="#">Приложения</a>
-      </li>
-      <li class="list-portfolio">
-        <a class="link-portfolio" href="#">Дизайн</a>
-      </li>
-      <li class="list-portfolio">
-        <a class="link-portfolio" href="#">Маркетинг</a>
-      </li>
-    </ul>
-  <!-- </div> -->
-    <ul class="projeck-conteiner">
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-a-min">
-            <h2 class="card-title">Технокряк</h2>
-            <p class="card-discr">Веб-сайт</p>
-          </div>
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-b-min">
-            <h2 class="card-title">Постер New Orlean vs Golden Stars</h2>
-            <p class="card-discr">Дизайн</p>
-          </div>
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-c-min">
-            <h2 class="card-title">Ресторан Seafood</h2>
-            <p class="card-discr">Приложение</p> 
-          </div>
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-d-min">
-            <h2 class="card-title">Проект Prime</h2>
-            <p class="card-discr">Маркетинг</p> 
-          </div>
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-i-min">
-            <h2 class="card-title">Проект Boxe</h2>
-            <p class="card-discr">Приложение</p> 
-          </div>
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-f-min">
-            <h2 class="card-title">Inspiration has no Borders</h2>
-           <p class="card-discr">Веб-сайт</p>
-          </div> 
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-g-min">
-            <h2 class="card-title">Издание Limited Edition</h2>
-           <p class="card-discr">Дизайн</p>
-          </div> 
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-h-min">
-            <h2 class="card-title">Проект LAB</h2>
-            <p class="card-discr">Маркетинг</p>
-          </div> 
-        </a>
-      </li>
-      <li class="card">
-        <a href="#">
-          <div class="card-content icon-i-min">
-            <h2 class="card-title">Growing Business</h2>
-            <p class="card-discr">Приложение</p> 
-          </div>
-        </a>
-      </li>
-    </ul>
+  <ul class="filtrs-batton">
+    <li class="list-portfolio">
+      <a class="link-portfolio" href="#" >Все</a>
+    </li>
+    <li class="list-portfolio">
+      <a class="link-portfolio" href="#">Веб-сайты</a>
+    </li>
+    <li class="list-portfolio">
+      <a class="link-portfolio" href="#">Приложения</a>
+    </li>
+    <li class="list-portfolio">
+      <a class="link-portfolio" href="#">Дизайн</a>
+    </li>
+    <li class="list-portfolio">
+      <a class="link-portfolio" href="#">Маркетинг</a>
+    </li>
+  </ul>
+  <ul class="projeck-conteiner">
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-a-min">
+          <h2 class="card-title">Технокряк</h2>
+          <p class="card-discr">Веб-сайт</p>
+        </div>
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-b-min">
+          <h2 class="card-title">Постер New Orlean vs Golden Stars</h2>
+          <p class="card-discr">Дизайн</p>
+        </div>
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-c-min">
+          <h2 class="card-title">Ресторан Seafood</h2>
+          <p class="card-discr">Приложение</p> 
+        </div>
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-d-min">
+          <h2 class="card-title">Проект Prime</h2>
+          <p class="card-discr">Маркетинг</p> 
+        </div>
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-i-min">
+          <h2 class="card-title">Проект Boxe</h2>
+          <p class="card-discr">Приложение</p> 
+        </div>
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-f-min">
+          <h2 class="card-title">Inspiration has no Borders</h2>
+          <p class="card-discr">Веб-сайт</p>
+        </div> 
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-g-min">
+          <h2 class="card-title">Издание Limited Edition</h2>
+          <p class="card-discr">Дизайн</p>
+        </div> 
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-h-min">
+          <h2 class="card-title">Проект LAB</h2>
+          <p class="card-discr">Маркетинг</p>
+        </div> 
+      </a>
+    </li>
+    <li class="card">
+      <a href="#">
+        <div class="card-content icon-i-min">
+          <h2 class="card-title">Growing Business</h2>
+          <p class="card-discr">Приложение</p> 
+        </div>
+      </a>
+    </li>
+  </ul>
  </main>
 
   <!-- подвал conteiner -->
