--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,16 @@
 <body>
 
   <!-- Шапка сайта с навигацией conteiner яя -->
-  <header class="underline">
-    <div class="header-nav conteiner">
-      <div class="block-logo">
-        <a href="#" class="logo">
-          <b>Web&nbsp;<span class="logo-black">Studio</span></b>
-        </a>        
-      </div>
+  <header class="header-nav">
+    <div class="conteiner">
+      <a href="#" class="logo">
+        <b>Web&nbsp;<span class="logo-black">Studio</span></b>
+      </a>        
       <nav>
         <ul class="site-nav">
           <li class="item"><a class="link " href="./index.html">Студия</a></li>
           <li class="item"><a class="link activ" href="./portfolio.html">Портфолио</a></li>
-          <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
+          <li class="item"><a class="link" href="./contact.html">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts-links">
