слямзил интересный SVG файл
не удержался

--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
 
       <!-- правая верхняя часть футера с подпиской -->
       <div class="subscribe">
-        <form action="">
+        <form action="forma">
           <p>
             <b>Подписаться на рассылку</b>
           </p>
