--- a/index.html
+++ b/index.html
@@ -264,10 +264,34 @@
           <b>Присоединяйтесь</b>
         </p>
         <ul>
-          <li><a class="soc-links instagram" href="#" aria-label=" ссылка на социальную сеть инстаграм"></a></li>
-          <li><a class="soc-links twitter" href="#" aria-label="ссылка на социальную сеть твиттер"></a></li>
-          <li><a class="soc-links facebook" href="#" aria-label="ссылка на социальную сеть фэйсбук"></a></li>
-          <li><a class="soc-links linkedin" href="#" aria-label="ссылка на социальную сеть линкедин"></a></li>
+          <li>
+            <a class="button-sprite icons-ig" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+              <svg class="button-icon" width="20px" height="20px">
+                <use href="./images/sprite.svg#icon-soc-ig"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="button-sprite icons-twit" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <svg class="button-icon" width="20px" height="16px">
+                <use href="./images/sprite.svg#icon-soc-tw"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="button-sprite icons-fb" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <svg class="button-icon" width="10" height="20">
+                <use href="./images/sprite.svg#icon-soc-fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="button-sprite icons-in" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <svg class="button-icon" width="13" height="14">
+                <use href="./images/sprite.svg#icon-soc-in"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>      
 
