--- a/portfolio.html
+++ b/portfolio.html
@@ -200,6 +200,9 @@
           <input type="text" value="E-mail">
           <a class="subscribe-button" href="#">
             <b>Подписаться</b>
+            <svg class="button-icon" width="13" height="14">
+              <use  width="24" height="24" href="./images/sprite.svg#icon-send"></use>
+            </svg>
           </a>
         </form>
       </div>        
