--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
           <input type="text" value="E-mail">
           <a class="subscribe-button" href="#">
             <b>Подписаться</b>
-            <svg class="button-icon" width="13" height="14">
+            <svg class="subscribe-button-icon">
               <use  width="24" height="24" href="./images/sprite.svg#icon-send"></use>
             </svg>
           </a>
