--- a/portfolio.html
+++ b/portfolio.html
@@ -192,18 +192,20 @@
       </div>      
 
       <!-- правая верхняя часть футера с подпиской -->
-      <div class="subscribe">
+      <div class="subscribe-box">
         <form action="forma">
           <p>
             <b>Подписаться на рассылку</b>
           </p>
-          <input type="text" value="E-mail">
-          <a class="subscribe-button" href="#">
-            <b>Подписаться</b>
-            <svg class="subscribe-button-icon">
-              <use href="./images/sprite.svg#icon-send"></use>
-            </svg>
-          </a>
+          <div class="subscribe-box-send">
+            <input type="text" value="E-mail">
+            <a class="subscribe-box-button" href="#">
+              <b>Подписаться</b>
+              <svg class="subscribe-icon-button">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </a>
+          </div>
         </form>
       </div>        
     </div> 
