долботня с формой подписки в футере
осознал, что есть опоздание в приминение стилей

--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,7 @@
       <div class="subscribe-box">
         <form action="forma">
           <p>
-            <b>Подписаться на рассылку</b>
+            <b>Подпишитесь на рассылку</b>
           </p>
           <div class="subscribe-box-send">
             <input type="text" value="E-mail">
