--- a/index.html
+++ b/index.html
@@ -296,15 +296,20 @@
       </div>      
 
       <!-- правая верхняя часть футера с подпиской -->
-      <div class="subscribe">
+      <div class="subscribe-box">
         <form action="forma">
           <p>
-            <b>Подписаться на рассылку</b>
+            <b>Подпишитесь на рассылку</b>
           </p>
-          <input type="text" value="E-mail" placeholder="E-mail" onfocus="this.value=''">
-          <a class="button" href="#">
-            <b>Подписаться</b>
-          </a>
+          <div class="subscribe-box-send">
+            <input type="text" value="E-mail">
+            <a class="subscribe-box-button" href="#">
+              <b>Подписаться</b>
+              <svg class="subscribe-icon-button">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </a>
+          </div>
         </form>
       </div>        
     </div> 
