соц сети в команде
продолжаю кипятить себе мозг

--- a/index.html
+++ b/index.html
@@ -195,16 +195,32 @@
             <p>UI Designer</p>
             <ul class="command-soc-link">
               <li>
-                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+                  <svg class="command-soc-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-soc-ig"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+                  <svg class="command-soc-icon" width="20px" height="16px">
+                    <use href="./images/sprite.svg#icon-soc-tw"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+                  <svg class="command-soc-icon" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-soc-fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+                  <svg class="command-soc-icon" width="13" height="14">
+                    <use href="./images/sprite.svg#icon-soc-in"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -219,6 +235,7 @@
           Постоянные клиенты
         </h2>
         <ul class="box-clietns">
+          <img src="./images/sprite.svg" alt="">
           <li>
             <img class="displayed" src="./images/client/a.svg" alt="логотип компании клиента a" />
           </li>
