--- a/portfolio.html
+++ b/portfolio.html
@@ -161,28 +161,28 @@
         </p>
         <ul>
           <li>
-            <a class="button-sprite icons-ig" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
               <svg class="button-icon" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-soc-ig"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="button-sprite icons-twit" href="#" aria-label=" ссылка на социальную сеть твиттер">
+            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
               <svg class="button-icon" width="20px" height="16px">
                 <use href="./images/sprite.svg#icon-soc-tw"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="button-sprite icons-fb" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
               <svg class="button-icon" width="10" height="20">
                 <use href="./images/sprite.svg#icon-soc-fb"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="button-sprite icons-in" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
               <svg class="button-icon" width="13" height="14">
                 <use href="./images/sprite.svg#icon-soc-in"></use>
               </svg>
