--- a/index.html
+++ b/index.html
@@ -235,24 +235,35 @@
           Постоянные клиенты
         </h2>
         <ul class="box-clietns">
-          <img src="./images/sprite.svg" alt="">
           <li>
-            <img class="displayed" src="./images/client/a.svg" alt="логотип компании клиента a" />
+            <svg class="box-clietns-icon" width="45" height="50">
+              <use href="./images/sprite.svg#icon-client-a"></use>
+            </svg>
           </li>
           <li>
-            <img class="displayed" src="./images/client/b.svg" alt="логотип компании клиента b" />
+            <svg class="box-clietns-icon" width="40" height="52">
+              <use href="./images/sprite.svg#icon-client-b"></use>
+            </svg>
           </li>
           <li>
-            <img class="displayed" src="./images/client/c.svg" alt="логотип компании клиента c" />
+            <svg class="box-clietns-icon" width="41" height="43">
+              <use href="./images/sprite.svg#icon-client-c"></use>
+            </svg>
           </li>
           <li>
-            <img class="displayed" src="./images/client/d.svg" alt="логотип компании клиента d" />
+            <svg class="box-clietns-icon" width="80" height="42">
+              <use href="./images/sprite.svg#icon-client-d"></use>
+            </svg>
           </li>
           <li>
-            <img class="displayed" src="./images/client/e.svg" alt="логотип компании клиента e" />
+            <svg class="box-clietns-icon" width="59" height="47">
+              <use href="./images/sprite.svg#icon-client-e"></use>
+            </svg>
           </li>
           <li>
-            <img class="displayed" src="./images/client/f.svg" alt="логотип компании клиента f" />
+            <svg class="box-clietns-icon" width="89" height="46">
+              <use href="./images/sprite.svg#icon-client-f"></use>
+            </svg>
           </li>
         </ul>
       </div>
