--- a/index.html
+++ b/index.html
@@ -142,16 +142,32 @@
             <p>Product Designer</p>
             <ul class="command-soc-link">
               <li>
-                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+                  <svg class="command-soc-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-soc-ig"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+                  <svg class="command-soc-icon" width="20px" height="16px">
+                    <use href="./images/sprite.svg#icon-soc-tw"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+                  <svg class="command-soc-icon" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-soc-fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+                  <svg class="command-soc-icon" width="13" height="14">
+                    <use href="./images/sprite.svg#icon-soc-in"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -160,15 +176,32 @@
             <p>Frontend Developer</p>
             <ul class="command-soc-link">
               <li>
-                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a></li>
-              <li>
-                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+                  <svg class="command-soc-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-soc-ig"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+                  <svg class="command-soc-icon" width="20px" height="16px">
+                    <use href="./images/sprite.svg#icon-soc-tw"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+                  <svg class="command-soc-icon" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-soc-fb"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+                  <svg class="command-soc-icon" width="13" height="14">
+                    <use href="./images/sprite.svg#icon-soc-in"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -177,16 +210,32 @@
             <p>Marketing</p>
             <ul class="command-soc-link">
               <li>
-                <a href="https://www.instagram.com/"><img src="./images/inst.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+                  <svg class="command-soc-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-soc-ig"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://twitter.com/"><img src="./images/twit.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+                  <svg class="command-soc-icon" width="20px" height="16px">
+                    <use href="./images/sprite.svg#icon-soc-tw"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/"><img src="./images/fb.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+                  <svg class="command-soc-icon" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-soc-fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/"><img src="./images/in.svg" alt="" /></a>
+                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+                  <svg class="command-soc-icon" width="13" height="14">
+                    <use href="./images/sprite.svg#icon-soc-in"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </li>
@@ -236,9 +285,11 @@
         </h2>
         <ul class="box-clietns">
           <li>
-            <svg class="box-clietns-icon" width="45" height="50">
-              <use href="./images/sprite.svg#icon-client-a"></use>
-            </svg>
+            <a href="">
+              <svg class="box-clietns-icon" width="45" height="50">
+                <use href="./images/sprite.svg#icon-client-a"></use>
+              </svg>
+            </a>
           </li>
           <li>
             <svg class="box-clietns-icon" width="40" height="52">
