--- a/index.html
+++ b/index.html
@@ -285,42 +285,42 @@
         </h2>
         <ul class="box-clietns">
           <li>
-            <a href="#">
+            <a class="box-clietns-item" href="#">sfsds
               <svg class="box-clietns-icon" width="45" height="50">
                 <use href="./images/sprite.svg#icon-client-a"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a  class="box-clietns-item" href="#">sfsf
               <svg class="box-clietns-icon" width="40" height="52">
                 <use href="./images/sprite.svg#icon-client-b"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a  class="box-clietns-item" href="#">
               <svg class="box-clietns-icon" width="41" height="43">
                 <use href="./images/sprite.svg#icon-client-c"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a  class="box-clietns-item" href="#">
               <svg class="box-clietns-icon" width="80" height="42">
                 <use href="./images/sprite.svg#icon-client-d"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a  class="box-clietns-item" href="#">
               <svg class="box-clietns-icon" width="59" height="47">
                 <use href="./images/sprite.svg#icon-client-e"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a  class="box-clietns-item" href="#">
               <svg class="box-clietns-icon" width="89" height="46">
                 <use href="./images/sprite.svg#icon-client-f"></use>
               </svg>
