--- a/index.html
+++ b/index.html
@@ -283,45 +283,45 @@
         <h2>
           Постоянные клиенты
         </h2>
-        <ul class="box-clietns">
-          <li>
-            <a class="box-clietns-item" href="#">sfsds
-              <svg class="box-clietns-icon" width="45" height="50">
+        <ul class="clients-list">
+          <li class="clients-item">
+            <a class="clients-link" href="#">
+              <svg class="clients-icon" width="45" height="50">
                 <use href="./images/sprite.svg#icon-client-a"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a  class="box-clietns-item" href="#">sfsf
-              <svg class="box-clietns-icon" width="40" height="52">
+          <li class="clients-item">
+            <a  class="clients-link" href="#">sfsf
+              <svg class="clients-icon" width="40" height="52">
                 <use href="./images/sprite.svg#icon-client-b"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a  class="box-clietns-item" href="#">
-              <svg class="box-clietns-icon" width="41" height="43">
+          <li class="clients-item">
+            <a  class="clients-link" href="#">
+              <svg class="clients-icon" width="41" height="43">
                 <use href="./images/sprite.svg#icon-client-c"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a  class="box-clietns-item" href="#">
-              <svg class="box-clietns-icon" width="80" height="42">
+          <li class="clients-item">
+            <a  class="clients-link" href="#">
+              <svg class="clients-icon" width="80" height="42">
                 <use href="./images/sprite.svg#icon-client-d"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a  class="box-clietns-item" href="#">
-              <svg class="box-clietns-icon" width="59" height="47">
+          <li class="clients-item">
+            <a class="clients-link" href="#">
+              <svg class="clients-icon" width="59" height="47">
                 <use href="./images/sprite.svg#icon-client-e"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a  class="box-clietns-item" href="#">
-              <svg class="box-clietns-icon" width="89" height="46">
+          <li class="clients-item">
+            <a class="clients-link" href="#">
+              <svg class="clients-icon" width="89" height="46">
                 <use href="./images/sprite.svg#icon-client-f"></use>
               </svg>
             </a>
