--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </a>
           </li>
           <li class="clients-item">
-            <a  class="clients-link" href="#">sfsf
+            <a  class="clients-link" href="#">
               <svg class="clients-icon" width="40" height="52">
                 <use href="./images/sprite.svg#icon-client-b"></use>
               </svg>
